WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87342
Elements in Shadow DOM is not resizable.
https://bugs.webkit.org/show_bug.cgi?id=87342
Summary
Elements in Shadow DOM is not resizable.
Shinya Kawanaka
Reported
2012-05-23 22:21:10 PDT
When an element has CSS { resize: 'both' }, it should be resizable. However if it is in Shadow DOM, it cannot be resizable.
Attachments
Patch
(4.48 KB, patch)
2012-05-23 22:36 PDT
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Patch for landing
(4.46 KB, patch)
2012-05-23 23:01 PDT
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Shinya Kawanaka
Comment 1
2012-05-23 22:27:06 PDT
Actually the root cause of this issue is the same as
bug 82568
, but this is testable...
Shinya Kawanaka
Comment 2
2012-05-23 22:36:36 PDT
Created
attachment 143733
[details]
Patch
Shinya Kawanaka
Comment 3
2012-05-23 22:38:09 PDT
Unfortunately I couldn't succeed testing textarea in Shadow DOM yet. It should be resizable by this patch, however I cannot confirm it in DRT... Writing a test for it should be done in
Bug 82568
, I think.
Ryosuke Niwa
Comment 4
2012-05-23 22:41:56 PDT
Comment on
attachment 143733
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=143733&action=review
> Source/WebCore/ChangeLog:3 > + Elements in Shadow DOM is not resizable.
Nit: ARE not resizable.
> Source/WebCore/rendering/RenderLayer.cpp:1858 > + Element* element = static_cast<Element*>(renderer()->node());
Don't we have toElement? We should at least assert that node() is Element*.
> LayoutTests/ChangeLog:3 > + Elements in Shadow DOM is not resizable.
Ditto: are.
> LayoutTests/fast/dom/shadow/resize-in-shadow-dom.html:6 > +<script src="resources/polyfill.js"></script> > +<script src="../resources/event-sender-util.js"></script> > +<script src="../../js/resources/js-test-pre.js"></script>
You can put all of this in the body instead.
> LayoutTests/fast/dom/shadow/resize-in-shadow-dom.html:40 > +var element = document.elementFromPoint(x, y);
Why do we need this statement here?
Shinya Kawanaka
Comment 5
2012-05-23 23:01:32 PDT
Created
attachment 143738
[details]
Patch for landing
Shinya Kawanaka
Comment 6
2012-05-23 23:02:22 PDT
(In reply to
comment #4
)
> (From update of
attachment 143733
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=143733&action=review
> > > Source/WebCore/ChangeLog:3 > > + Elements in Shadow DOM is not resizable. > > Nit: ARE not resizable. > > > Source/WebCore/rendering/RenderLayer.cpp:1858 > > + Element* element = static_cast<Element*>(renderer()->node()); > > Don't we have toElement? We should at least assert that node() is Element*. > > > LayoutTests/ChangeLog:3 > > + Elements in Shadow DOM is not resizable. > > Ditto: are. > > > LayoutTests/fast/dom/shadow/resize-in-shadow-dom.html:6 > > +<script src="resources/polyfill.js"></script> > > +<script src="../resources/event-sender-util.js"></script> > > +<script src="../../js/resources/js-test-pre.js"></script> > > You can put all of this in the body instead. > > > LayoutTests/fast/dom/shadow/resize-in-shadow-dom.html:40 > > +var element = document.elementFromPoint(x, y); > > Why do we need this statement here?
Thanks for very fast review! I've updated the patch. I will land it after the bots become green.
WebKit Review Bot
Comment 7
2012-05-24 02:16:22 PDT
Comment on
attachment 143738
[details]
Patch for landing Clearing flags on attachment: 143738 Committed
r118338
: <
http://trac.webkit.org/changeset/118338
>
WebKit Review Bot
Comment 8
2012-05-24 02:16:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug